--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install nose pylint
+  # TODO: specify flask version
+  - pip install flask
 # command to run tests
 script:
   - find . -name "*.py" | xargs pylint -E
