--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
      container_name: jenkins_slack_bot_rtm
      extends: db
      entrypoint: python3.4 slackbot.py
+     restart: always
 
 #Please set the PUBLISHED PORT (the publicly exposed port) to receive the events from slack to your HOST MACHINE.
 
@@ -31,3 +32,4 @@ services:
      ports:
       - "PUBLISHED_PORT:80"
      entrypoint: python3.4 start_app.py
+     restart: always
